# socketmaster

./: .gitignore  CMakeLists.txt  README.md
src/: configuration.cc  configuration.h  logger.cc  logger.h  main.cc  port_manager.cc  port_manager.h  server.cc  server.h  session.cc  session.h
